<?xml version="1.0"?>
<package>
  <name>husky_description</name>
  <version>1.0.8</version>
  <description>Clearpath Husky URDF description</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_description</url>
  <url type="bugtracker">https://github.com/husky/husky/issues</url>
  <url type="repository">https://github.com/husky/husky</url>

  <author>Ryan Gariepy</author>
  <author email="pmukherj@clearpathrobotics.com">Prasenjit Mukherjee</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
